# YabiArch

./: CMakeLists.txt  README.md
include/addrmod/: Addrmoder.hpp
include/arch/: InstStruct.hpp  YabiMachine.hpp
include/arch/adu/: ADU.hpp  AddrFunc.hpp  Op.hpp  addrfuncs.hpp
include/arch/dcu/: DCU.hpp
include/arch/inst/: InstFunc.hpp  InstStruct.hpp  Instruction.hpp  instructions.hpp
include/arch/ixu/: IXU.hpp  InstFunc.hpp  instfuncs.hpp
include/def/: addrmod.hpp  config.hpp  eflag.hpp  err.hpp  ioid.hpp  opcode.hpp  opcomb.hpp  optype.hpp  port.hpp  reg.hpp  types.hpp  yabi.hpp
include/def/addr/: addrmd.hpp
include/def/addrmd/: addrmd.hpp
include/def/eflag/: eflag.hpp
include/def/io/: port.hpp  reg.hpp
include/def/op/: opcode.hpp  opsize.hpp  optype.hpp
include/io/: LinearIO.hpp  OrderedIO.hpp  RandIO.hpp  RandomIO.hpp  UniIO.hpp
include/io/dev/: PeriDeviceIO.hpp
include/io/mem/: MemoryIO.hpp
include/io/op/: ImmopIO.hpp  MemopIO.hpp  RegopIO.hpp
include/io/reg/: RegTableIO.hpp
include/utility/: bit.hpp  byteorder.hpp
src/: CMakeLists.txt
src/arch/: YabiMachine.cpp
src/arch/adu/: ADU.cpp
src/arch/dcu/: DCU.cpp
src/io/dev/: PeriDeviceIO.cpp
src/io/mem/: MemoryIO.cpp
src/io/op/: ImmopIO.cpp  MemopIO.cpp  RegopIO.cpp
src/io/reg/: RegIO.cpp  RegTableIO.cpp
src/main/: Makefile  main.cpp
